test/e2e/testdata/backendtrafficpolicy-session-persistence-cookie-path.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: session-persistence-cookie-path-override
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: session-persistence-cookie-path
  sessionPersistence:
    cookie:
      path: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: session-persistence-cookie-path
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cookie-session-persistence-cookie-path
    backendRefs:
    - name: infra-backend-v1
      port: 8080
    sessionPersistence:
      sessionName: Session-A
      type: Cookie
      absoluteTimeout: 10s
      cookieConfig:
        lifetimeType: Permanent
